PENG-2414 add icon url to the cfd-openfoam-motorbike job script

--- a/cfd-openfoam-motorbike/metadata.yaml
+++ b/cfd-openfoam-motorbike/metadata.yaml
@@ -1,4 +1,5 @@
 summary: Compute steady flow around a motorcycle
+icon-url: https://upload.wikimedia.org/wikipedia/commons/4/48/OpenFOAM_logo.svg
 entrypoint: job-script.sh
 image-source: Dockerfile
 image-tags:
