fix typo in the *Install Apptainer* action in the *catalog-cd* workflow

--- a/.github/workflows/catalog-cd.yaml
+++ b/.github/workflows/catalog-cd.yaml
@@ -54,7 +54,7 @@ jobs:
         run: |
           sudo apt install -y software-properties-common
           sudo add-apt-repository -y ppa:apptainer/ppa
-          sudo apt-update
+          sudo apt update
           sudo apt install -y apptainer
 
       - name: Configure settings
