--- a/hpcg-benchmark-oacc/metadata.yaml
+++ b/hpcg-benchmark-oacc/metadata.yaml
@@ -2,7 +2,7 @@ summary: Benchmark using HPCG built with AMD compilers
 icon-url: https://logosmarcas.net/wp-content/uploads/2020/03/AMD-Logo.png
 entrypoint: hpcg-oacc.sh
 supporting-files:
-  - HPCG.dat
+  - HPCG.dat.txt
 image-source:
   - Dockerfile
 image-tags:
