--- a/hpcg-benchmark/metadata.yaml
+++ b/hpcg-benchmark/metadata.yaml
@@ -2,7 +2,7 @@ summary: Benchmark using HPCG
 icon-url: https://www.hpcg-benchmark.org/images/header.gif
 entrypoint: hpcg.sh
 supporting-files:
-  - HPCG.dat
+  - HPCG.dat.txt
 image-source: Dockerfile
 image-tags:
   - "1.0.0"
