Fix the image-source for hpl-aocc metadata.yaml

--- a/hpcg-benchmark-oacc/metadata.yaml
+++ b/hpcg-benchmark-oacc/metadata.yaml
@@ -3,8 +3,7 @@ icon-url: https://logosmarcas.net/wp-content/uploads/2020/03/AMD-Logo.png
 entrypoint: hpcg-oacc.sh
 supporting-files:
   - HPCG.dat.txt
-image-source:
-  - Dockerfile
+image-source: Dockerfile
 image-tags:
   - "1.0.0"
   - "latest"
